--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,6 @@ botcity-framework-core==1.2.1
 botcity-maestro-sdk>=0.3.3,<1.0
 botcity-framework-web==0.10.0
 webdriver-manager==4.0.2
-selenium==3.141
 pandas==2.2.3
 openpyxl==3.1.5
+#selenium==3.141
